tests/e2e/semantics/mutation/invalid_arg.error
Error: syntax error in story at line 1, column 28

1|    a = [1, 2].contains(item:1 bar:2)
                                 ^

E0075: Expected closing parenthesis: )
